Se cambia el texto del h1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
- <h1 class="heading">No te lo voy a regalar.</h1>
+ <h1 class="heading">Curso de Trading</h1>
 
  <div class="container">
 
