Se hacen ajustes para que no se vea cada inicio de palabra con mayúscula

--- a/index.html
+++ b/index.html
@@ -35,17 +35,17 @@
 
         <div class="vid">
             <video src="vid/vid3.mp4" poster="img/3_trading.jpg" muted></video>
-             <h3 class="title">03. Video 3</h3>
+             <h3 class="title">03. El trading tu pasión</h3>
         </div>
 
         <div class="vid">
             <video src="vid/vid4.mp4" muted></video>
-            <h3 class="title">04. Video 4</h3>
+            <h3 class="title">04. El dinero es una consecuencia de tu esfuerzo</h3>
         </div>
 
         <div class="vid">
             <video src="vid/vid5.mp4" muted></video>
-             <h3 class="title">05. Video 5</h3>
+             <h3 class="title">05. Esta es una propuesta</h3>
         </div>
 
         <div class="vid">
