Se pono el h1 en mayúscula

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Custom CSS file link -->
     <link rel="stylesheet" href="css/style.css">
-    <title>Curso De Ilustración MigasDesign</title>
+    <title>TradingMaster</title>
     <!--con referencia de: https://youtu.be/z3Y5gJWmVVU -->
 </head>
 <body>
 
- <h1 class="heading">Curso de Trading</h1>
+ <h1 class="heading">CURSO DE TRADING</h1>
 
  <div class="container">
 
